<resources>
    <string name="app_name">My Application SQLite</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="hintLogin">Enter your email here</string>
    <string name="bLogin">Login</string>
    <string name="bSignUp">Sign Up</string>
    <string name="tvSignUp">Sign Up</string>
    <string name="tvName2">Name</string>
    <string name="tvEmail2">Email</string>
    <string name="tvPassword2">Password</string>
    <string name="bValider2">Valider</string>
    <string name="bAjouter">Ajouter</string>
    <string name="bModifier">Modifier</string>
    <string name="bSupprimer">Supprimer</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="login_menu">Login</string>
    <string name="logout_menu">Logout</string>
    <string name="calc_menu">Calculator</string>
    <string name="convert_menu">Convertir C-F-K</string>
    <string name="afficher_menu">Afficher</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>