<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SigininFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/tvAuthentification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-80dp"
                android:layout_marginBottom="100dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:fontFamily="@font/basic"
                android:textSize="40sp" />

            <EditText
                android:id="@+id/etLogin"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:height="50dp"
                android:hint="@string/hintLogin"
                android:inputType="text"/>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:height="50dp"
                android:ems="10"
                android:hint="Enter your Password here"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/bLogin"
                android:layout_width="220dp"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/headerMenu"
                android:text="@string/bLogin" />

            <Button
                android:id="@+id/bSignUp"
                android:layout_width="220dp"
                android:layout_height="40dp"
                android:layout_marginTop="0dp"
                android:backgroundTint="@color/headerMenu"
                android:text="@string/bSignUp" />
        </LinearLayout>

</FrameLayout>