<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".AffichageFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="13dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/userCount"
                android:textSize="22sp"
                android:text="5 clients"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="15dp"/>

            <ListView
                android:id="@+id/lvAffichage"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/textfield"
                android:textSize="15dp"
                android:text="TextView"/>

            <Button
                android:id="@+id/bAjouter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/headerMenu"
                android:text="@string/bAjouter" />

            <Button
                android:id="@+id/bModifier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/headerMenu"
                android:text="@string/bModifier" />

            <Button
                android:id="@+id/bSupprimer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/headerMenu"
                android:text="@string/bSupprimer" />

    </LinearLayout>

</FrameLayout>